[package]
name = "calculator"
version = "0.1.0"
authors = ["Joseph Hendrix"]
description = "A simple wrapper for my linear algebra library"
license = "MIT/Apache-2.0"
repository = "https://github.com/joeleehen/calculator"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
lee_alg = {path = "../lee_alg"}
js-sys = "0.3"
